[package]
name = "arc-buffer"
version = "0.1.0"
authors = ["Spencer Young <spencerwyoung@outlook.com>"]
edition = "2018"
description = "A Clone-on-write reference-counter vector for Copy types."
license = "LICENSE"
repository = "https://github.com/youngspe/arc-buffer"
homepage = "https://github.com/youngspe/arc-buffer"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
header-slice = "0.1.2"

